--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -28,7 +28,7 @@
         <item
             android:id="@+id/menu_directions"
             android:icon="@drawable/ic_directions_white_24dp"
-            android:title="@string/menu_direction"
+            android:title="@string/menu_command"
             android:visible="true"
             app:showAsAction="ifRoom" />
     </group>
