--- a/app/src/main/res/layout/activity_commands_list_item.xml
+++ b/app/src/main/res/layout/activity_commands_list_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
