nové commandy a lepší vzhled

--- a/app/src/main/res/layout/activity_commands.xml
+++ b/app/src/main/res/layout/activity_commands.xml
@@ -10,7 +10,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@+id/navigation_tab_bar"
         app:layout_constraintLeft_toLeftOf="parent"
