--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -45,10 +45,10 @@
         android:title="@string/menu_new"
         android:visible="true"
         app:showAsAction="ifRoom" />
-    <item
+<!--    <item
         android:id="@+id/menu_save"
         android:icon="@drawable/ic_save_white_24dp"
         android:title="@string/menu_save"
         android:visible="true"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 </menu>
